<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".AddPlantOptions">

    <!-- Line at the top  fix to top -->
    <View
        android:id="@+id/view"
        android:layout_width="fill_parent"
        android:layout_height="15dp"
        android:background="#00AA95"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--  Options form -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--  Title Layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:textAlignment="center">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/add_a_plant"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/back_to_plants_button"
                android:layout_width="wrap_content"
                android:layout_height="29dp"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:background="@drawable/action_button"
                android:backgroundTint="@color/accent"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:paddingHorizontal="17dp"
                android:paddingVertical="0dp"
                android:text="@string/plants"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textFontWeight="450"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.903"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>


        <!-- Camera Picker layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingVertical="20dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/plant_camera_button"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginEnd="60dp"
                android:contentDescription="@string/camera_button_to_take_a_picture"
                android:background="@drawable/round_button"
                android:padding="24dp"
                android:src="@drawable/camera_icon" />

            <TextView
                android:id="@+id/plant_image_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="        Add a photo        "
                android:textAlignment="center"
                android:clipToOutline="true"
                android:scaleType="centerCrop"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText"
                tools:targetApi="s" />
        </LinearLayout>

        <!-- Calendar Picker layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/date_picker_button"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/round_button"
                android:padding="24dp"
                android:contentDescription="@string/open_calendar_view"
                android:src="@drawable/calendar_icon" />

            <TextView
                android:id="@+id/watering_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_first_watering_date"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/plant_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:text="@string/plant_name"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/plant_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/round_button"
            android:hint="@string/enter_plant_name"
            android:inputType="text"
            android:maxLength="25"
            android:padding="9dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/plant_type_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:text="@string/plant_type"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/plant_type_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/round_button"
            android:hint="@string/enter_plant_type"
            android:inputType="textPersonName"
            android:maxLength="25"
            android:padding="9dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            tools:ignore="Autofill" />


        <TextView
            android:id="@+id/water_cycle_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:text="@string/how_often_should_this_plant_be_watered"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/water_cycle_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/round_button"
            android:hint="@string/enter_number_of_days"
            android:inputType="number"
            android:maxLength="3"
            android:padding="9dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:importantForAutofill="no" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/create_plant"
            android:layout_width="257dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:background="@drawable/action_button"
            android:backgroundTint="@color/accent"
            android:fontFamily="sans-serif-medium"
            android:text="@string/continue_button"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textFontWeight="450"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.741"
            tools:ignore="TextContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>