<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".PlantInfo">
    <!-- Line at the top  fix to top -->
    <View
        android:id="@+id/view"
        android:layout_width="fill_parent"
        android:layout_height="15dp"
        android:background="#00AA95"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!-- Add round_button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/remove_plant_button"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/action_button"
        android:backgroundTint="@color/red"
        android:fontFamily="sans-serif-medium"
        android:text="@string/remove"
        android:paddingHorizontal="12dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textFontWeight="450"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.94"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.068"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/plant_item_type"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="48dp"
        android:background="@drawable/label"
        android:backgroundTint="@color/fertilizer"
        android:gravity="center"
        android:paddingHorizontal="12dp"
        android:text="@string/cactus"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.118" />

    <ImageView
        android:id="@+id/plant_item_image_xl"
        android:layout_width="285dp"
        android:layout_height="285dp"
        android:layout_gravity="center"
        android:layout_marginVertical="10dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/round_button"
        android:backgroundTint="@color/white"
        android:clipToOutline="true"
        android:scaleType="centerCrop"
        android:contentDescription="@string/plant_image"
        android:padding="5dp"
        android:src="@drawable/plant_sample"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.268"
        tools:ignore="ImageContrastCheck"
        tools:targetApi="s" />


    <TextView
        android:id="@+id/plant_item_name"
        android:layout_width="374dp"
        android:layout_height="75dp"
        android:layout_margin="10dp"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLength="25"
        android:maxLines="1"
        android:text="@string/plant_sample_name"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:translationY="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.525"
        tools:ignore="TextContrastCheck" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/plant_list_item"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="260dp"
        android:background="@drawable/plant_list_item_background"
        android:orientation="vertical"
        android:paddingHorizontal="3dp"
        android:translationY="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_min="340dp">


        <ImageView
            android:id="@+id/plant_item_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/round_button"
            android:backgroundTint="@color/water"
            android:contentDescription="@string/plant_image"
            android:padding="6dp"
            android:scaleType="centerCrop"
            android:src="@drawable/water_drop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/to_be_watered_in"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/plant_item_next_watering"
            app:layout_constraintHorizontal_bias="0.535"
            app:layout_constraintStart_toEndOf="@+id/plant_item_image"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/plant_item_next_watering"
            android:layout_width="72dp"
            android:layout_height="23dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/label"
            android:gravity="center"
            android:maxWidth="11dp"
            android:maxLength="8"
            android:paddingHorizontal="2dp"
            android:text="@string/plant_sample_days"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/schedule_label"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:background="@drawable/action_button"
        android:backgroundTint="@color/accent"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:paddingHorizontal="17dp"
        android:text="@string/schedule"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textFontWeight="450"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.903"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/water_cycle_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_be_watered_every_123_days"
        android:textColor="@color/white"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/schedule_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plant_list_item"
        app:layout_constraintVertical_bias="0.611" />

</androidx.constraintlayout.widget.ConstraintLayout>