<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/plant_list_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:background="@drawable/plant_list_item_background"
    android:baselineAligned="false"
    android:paddingHorizontal="3dp"
    tools:context=".ListItem"
    >


    <ImageView
        android:id="@+id/plant_item_image"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginVertical="10dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/round_button"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/plant_image"
        android:padding="6dp"
        android:clipToOutline="true"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        android:src="@drawable/plant_sample"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck"
        tools:targetApi="s" />

    <TextView
        android:id="@+id/plant_item_name"
        android:layout_width="249dp"
        android:layout_height="26dp"
        android:layout_margin="10dp"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/plantocrates"
        android:maxLength="25"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/plant_item_next_watering"
        app:layout_constraintStart_toEndOf="@+id/plant_item_image"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/plant_item_next_watering"
        android:layout_width="72dp"
        android:layout_height="23dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/label"
        android:maxWidth="11dp"
        android:maxLength="8"
        android:paddingHorizontal="2dp"
        android:gravity="center"
        android:text="@string/_254_days"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>