<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".PlantsScheduleViewFragment">

    <!-- Line at the top -->
    <View
        android:layout_width="fill_parent"
        android:layout_height="15dp"
        android:background="#00AA95" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:textAlignment="center">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/your_plants_schedule"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/schedule_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight=".3"
            android:background="@drawable/label"
            android:backgroundTint="@color/water"
            android:padding="2dp"
            android:text="@string/water"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="17sp" />

    </LinearLayout>

    <!-- Only rendered if the list of plants is empty -->
    <LinearLayout
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <!-- Source: Lottie animations -->
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="450dp"
            android:layout_height="450dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.112"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/watering_plants_animation" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_plants"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />


    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <!-- Recycler view -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/local_plants_list"
            android:layout_width="match_parent"
            android:layout_height="530dp"
            android:layout_marginHorizontal="25dp"
            android:layout_marginBottom="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.112" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <ImageView
        android:id="@+id/add_plant_options"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginBottom="45dp"
        android:background="@drawable/round_button"
        android:contentDescription="@string/camera_icon"
        android:padding="17dp"
        android:src="@drawable/add"
        tools:ignore="ImageContrastCheck" />

</LinearLayout>